--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
+  "name": "web-os-js",
+  "version": "1.0.0",
+  "description": "WebOS for JS",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -7,5 +11,9 @@
   },
   "devDependencies": {
     "vite": "3.1.3"
+  },
+  "dependencies": {
+    "@sentry/browser": "^7.39.0",
+    "@sentry/tracing": "^7.39.0"
   }
 }
